--- a/examples/kustomization/base/tenant.yaml
+++ b/examples/kustomization/base/tenant.yaml
@@ -163,14 +163,14 @@ spec:
     ## Servers specifies the number of MinIO Tenant Pods / Servers in this pool.
     ## For standalone mode, supply 1. For distributed mode, supply 4 or more.
     ## Note that the operator does not support upgrading from standalone to distributed mode.
-    - servers: 4
+    - servers: 3
       ## custom name for the pool
       name: pool-0
       ## Specify one or more Pod Topology Spread Constraints to apply to pods deployed in the MinIO pool.
       ## https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints 
       topologySpreadConstraints: [ ]
       ## volumesPerServer specifies the number of volumes attached per MinIO Tenant Pod / Server.
-      volumesPerServer: 4
+      volumesPerServer: 2
       ## nodeSelector parameters for MinIO Pods. It specifies a map of key-value pairs. For the pod to be
       ## eligible to run on a node, the node must have each of the
       ## indicated key-value pairs as labels.
@@ -197,7 +197,7 @@ spec:
             - ReadWriteOnce
           resources:
             requests:
-              storage: 1Ti
+              storage: 8Gi
           storageClassName: standard
         status: { }
       ## Configure Pod's security context
