--- a/examples/kustomization/base/tenant.yaml
+++ b/examples/kustomization/base/tenant.yaml
@@ -198,7 +198,7 @@ spec:
           resources:
             requests:
               storage: 8Gi
-          storageClassName: standard
+          storageClassName: local-storage
         status: { }
       ## Configure Pod's security context
       ## We recommend to skip the recursive permission change by using
